Upgrade project to use `Java 21` using openrewrite.